--- a/requirements.txt
+++ b/requirements.txt
@@ -1,61 +1,61 @@
-accelerate==0.15.0
-aiohttp==3.8.3
-aiosignal==1.3.1
-aiosqlite==0.17.0
-async-timeout==4.0.2
-attrs==22.1.0
-certifi==2022.9.24
-cffi==1.15.1
-charset-normalizer==2.1.1
-colorama==0.4.6
-cryptography==39.0.0
-diffusers==0.11.1
-dill==0.3.6
-easy-pil==0.1.9
-env==0.1.0
-filelock==3.9.0
-frozenlist==1.3.3
-ftfy==6.1.1
-function-cooldowns==1.6.0
-greenlet==2.0.1
-huggingface-hub==0.11.1
-idna==3.4
-importlib-metadata==6.0.0
-loguru==0.6.0
-lxml==4.9.2
-multidict==6.0.2
-multiprocess==0.70.14
-nextcord==2.3.2
-numerize==0.12
-numpy==1.24.1
-openai==0.27.0
-packaging==23.0
-pathos==0.3.0
-Pillow==8.4.0
-pox==0.3.2
-ppft==1.7.6.6
-psutil==5.9.4
-pycparser==2.21
-pydantic==1.10.4
-PyExecJS==1.5.1
-PyNaCl==1.5.0
-pyshorteners==1.0.1
-python-dotenv==0.21.0
-PyYAML==6.0
-regex==2022.10.31
-replicate==0.4.0
-requests==2.28.1
-scipy==1.10.0
-six==1.16.0
-SQLAlchemy==1.4.41
-tokenizers==0.13.2
-tqdm==4.64.1
-transformers==4.25.1
-translators==5.2.2
-typing==3.7.4.3
-typing_extensions==4.4.0
-urllib3==1.26.13
-wcwidth==0.2.5
-win32-setctime==1.1.0
-yarl==1.8.1
-zipp==3.11.0
+accelerate
+aiohttp
+aiosignal
+aiosqlite
+async-timeout
+attrs
+certifi
+cffi
+charset-normalizer
+colorama
+cryptography
+diffusers
+dill
+easy-pil
+env
+filelock
+frozenlist
+ftfy
+function-cooldowns
+greenlet
+huggingface-hub
+idna
+importlib-metadata
+loguru
+lxml
+multidict
+multiprocess
+nextcord
+numerize
+numpy
+openai
+packaging
+pathos
+Pillow
+pox
+ppft
+psutil
+pycparser
+pydantic
+PyExecJS
+PyNaCl
+pyshorteners
+python-dotenv
+PyYAML
+regex
+replicate
+requests
+scipy
+six
+SQLAlchemy
+tokenizers
+tqdm
+transformers
+translators
+typing
+typing_extensions
+urllib3
+wcwidth
+win32-setctime
+yarl
+zipp
