Refactor github_cogs

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 accelerate
-aiohttp
+aiohttp~=3.8.5
 aiosignal
 aiosqlite
 async-timeout
@@ -12,7 +12,7 @@ cryptography
 diffusers
 dill
 easy-pil
-env
+env~=0.1.0
 filelock
 frozenlist
 ftfy
@@ -25,10 +25,10 @@ loguru
 lxml
 multidict
 multiprocess
-nextcord
+nextcord~=2.6.0
 numerize
 numpy
-openai
+openai~=0.28.1
 packaging
 pathos
 Pillow
@@ -39,23 +39,26 @@ pycparser
 pydantic
 PyExecJS
 PyNaCl
-pyshorteners
+pyshorteners~=1.0.1
 python-dotenv
 PyYAML
 regex
-replicate
-requests
+replicate~=0.13.0
+requests~=2.31.0
 scipy
 six
 SQLAlchemy
 tokenizers
 tqdm
 transformers
-translators
-typing
+translators~=5.8.5
+typing~=3.7.4.3
 typing_extensions
 urllib3
 wcwidth
 win32-setctime
 yarl
 zipp
+
+nextwave~=1.5
+cloudinary~=1.36.0
